[ML] Update texts

--- a/x-pack/plugins/translations/translations/ja-JP.json
+++ b/x-pack/plugins/translations/translations/ja-JP.json
@@ -9080,6 +9080,28 @@
     "xpack.fileDataVisualizer.welcomeContent.uploadedFilesAllowedSizeDescription": "最大{maxFileSize}のファイルをアップロードできます。",
     "xpack.fileDataVisualizer.welcomeContent.visualizeDataFromLogFileDescription": "ファイルデータビジュアライザーは、ログファイルのフィールドとメトリックの理解に役立ちます。ファイルをアップロードして、データを分析し、 Elasticsearch インデックスにインポートするか選択できます。",
     "xpack.fileDataVisualizer.welcomeContent.visualizeDataFromLogFileTitle": "ログファイルのデータを可視化 {experimentalBadge}",
+    "xpack.fileDataVisualizer.actionsPanel.discoverAppTitle": "Discover",
+    "xpack.fileDataVisualizer.actionsPanel.exploreTitle": "データの調査",
+    "xpack.fileDataVisualizer.actionsPanel.viewIndexInDiscoverDescription": "インデックスのドキュメントを調査します。",
+    "xpack.fileDataVisualizer.indexBased.fieldNameSelect": "フィールド名",
+    "xpack.fileDataVisualizer.indexBased.fieldTypeSelect": "フィールド型",
+    "xpack.fileDataVisualizer.indexBasedDataGrid.actionsColumnLabel": "アクション",
+    "xpack.fileDataVisualizer.indexBasedDataGrid.exploreInLensDescription": "Lensで検索",
+    "xpack.fileDataVisualizer.indexBasedDataGrid.exploreInLensTitle": "Lensで検索",
+    "xpack.fileDataVisualizer.lensChart.averageOfLabel": "{fieldName}の平均",
+    "xpack.fileDataVisualizer.lensChart.chartTitle": "{fieldName}のLens",
+    "xpack.fileDataVisualizer.lensChart.countLabel": "カウント",
+    "xpack.fileDataVisualizer.lensChart.topValuesLabel": "トップの値",
+    "xpack.fileDataVisualizer.searchPanel.allOptionLabel": "すべて検索",
+    "xpack.fileDataVisualizer.searchPanel.invalidKuerySyntaxErrorMessageQueryBar": "無効なクエリ",
+    "xpack.fileDataVisualizer.searchPanel.queryBarPlaceholder": "小さいサンプルサイズを選択することで、クエリの実行時間を短縮しクラスターへの負荷を軽減できます。",
+    "xpack.fileDataVisualizer.searchPanel.sampleSizeAriaLabel": "サンプリングするドキュメント数を選択してください",
+    "xpack.fileDataVisualizer.searchPanel.sampleSizeOptionLabel": "サンプルサイズ (シャード単位) ：{wrappedValue}",
+    "xpack.fileDataVisualizer.searchPanel.showEmptyFields": "空のフィールドを表示",
+    "xpack.fileDataVisualizer.searchPanel.totalDocCountLabel": "合計ドキュメント数：{strongTotalCount}",
+    "xpack.fileDataVisualizer.fieldDataCard.documentCountChart.seriesLabel": "ドキュメントカウント",
+    "xpack.fileDataVisualizer.fieldDataCard.fieldNotInDocsLabel": "このフィールドは選択された時間範囲のドキュメントにありません",
+    "xpack.fileDataVisualizer.fieldDataCard.loadingLabel": "読み込み中",
     "xpack.fileUpload.fileSizeError": "ファイルサイズ{fileSize}は最大ファイルサイズの{maxFileSize}を超えています",
     "xpack.fileUpload.fileTypeError": "ファイルは使用可能なタイプのいずれかではありません。{types}",
     "xpack.fileUpload.geojsonFilePicker.acceptedCoordinateSystem": "座標は EPSG:4326 座標参照系でなければなりません。",
@@ -14874,46 +14896,9 @@
     "xpack.ml.dataGridChart.histogramNotAvailable": "グラフはサポートされていません。",
     "xpack.ml.dataGridChart.notEnoughData": "0個のドキュメントにフィールドが含まれます。",
     "xpack.ml.dataGridChart.topCategoriesLegend": "上位 {maxChartColumns}/{cardinality} カテゴリ",
-    "xpack.ml.datavisualizer.actionsPanel.advancedDescription": "より高度なユースケースでは、すべてのオプションを使用してジョブを作成します。",
-    "xpack.ml.datavisualizer.actionsPanel.advancedTitle": "高度な異常検知",
-    "xpack.ml.datavisualizer.actionsPanel.createJobTitle": "ジョブを作成",
-    "xpack.ml.datavisualizer.actionsPanel.dataframeAnalyticsTitle": "データフレーム分析",
-    "xpack.ml.datavisualizer.actionsPanel.dataframeTypesDescription": "異常値検出、回帰分析、分類分析を作成します。",
-    "xpack.ml.datavisualizer.actionsPanel.discoverAppTitle": "Discover",
-    "xpack.ml.datavisualizer.actionsPanel.exploreTitle": "データの調査",
-    "xpack.ml.datavisualizer.actionsPanel.viewIndexInDiscoverDescription": "インデックスのドキュメントを調査します。",
-    "xpack.ml.datavisualizer.dataGrid.collapseDetailsForAllAriaLabel": "すべてのフィールドの詳細を折りたたむ",
-    "xpack.ml.datavisualizer.dataGrid.distinctValuesColumnName": "固有の値",
-    "xpack.ml.datavisualizer.dataGrid.distributionsColumnName": "分布",
-    "xpack.ml.datavisualizer.dataGrid.documentsCountColumnName": "ドキュメント (%) ",
-    "xpack.ml.datavisualizer.dataGrid.expandDetailsForAllAriaLabel": "すべてのフィールドの詳細を展開",
-    "xpack.ml.datavisualizer.dataGrid.nameColumnName": "名前",
-    "xpack.ml.datavisualizer.dataGrid.rowCollapse": "{fieldName} の詳細を非表示",
-    "xpack.ml.datavisualizer.dataGrid.rowExpand": "{fieldName} の詳細を表示",
-    "xpack.ml.datavisualizer.dataGrid.showDistributionsAriaLabel": "分布を表示",
-    "xpack.ml.datavisualizer.dataGrid.typeColumnName": "型",
     "xpack.ml.datavisualizer.dataLoader.internalServerErrorMessage": "インデックス {index} のデータの読み込み中にエラーが発生。{message}。リクエストがタイムアウトした可能性があります。小さなサンプルサイズを使うか、時間範囲を狭めてみてください。",
     "xpack.ml.dataVisualizer.fileBasedLabel": "ファイル",
-    "xpack.ml.dataVisualizer.indexBased.fieldNameSelect": "フィールド名",
-    "xpack.ml.dataVisualizer.indexBased.fieldTypeSelect": "フィールド型",
-    "xpack.ml.dataVisualizer.indexBasedDataGrid.actionsColumnLabel": "アクション",
-    "xpack.ml.dataVisualizer.indexBasedDataGrid.exploreInLensDescription": "Lensで検索",
-    "xpack.ml.dataVisualizer.indexBasedDataGrid.exploreInLensTitle": "Lensで検索",
-    "xpack.ml.dataVisualizer.lensChart.averageOfLabel": "{fieldName}の平均",
-    "xpack.ml.dataVisualizer.lensChart.chartTitle": "{fieldName}のLens",
-    "xpack.ml.dataVisualizer.lensChart.countLabel": "カウント",
-    "xpack.ml.dataVisualizer.lensChart.topValuesLabel": "トップの値",
     "xpack.ml.datavisualizer.page.errorLoadingDataMessage": "インデックス {index} のデータの読み込み中にエラーが発生。{message}。",
-    "xpack.ml.dataVisualizer.searchPanel.allFieldsLabel": "すべてのフィールド",
-    "xpack.ml.datavisualizer.searchPanel.allOptionLabel": "すべて検索",
-    "xpack.ml.datavisualizer.searchPanel.invalidKuerySyntaxErrorMessageQueryBar": "無効なクエリ",
-    "xpack.ml.dataVisualizer.searchPanel.numberFieldsLabel": "数値フィールド",
-    "xpack.ml.dataVisualizer.searchPanel.ofFieldsTotal": "合計 {totalCount}",
-    "xpack.ml.datavisualizer.searchPanel.queryBarPlaceholder": "小さいサンプルサイズを選択することで、クエリの実行時間を短縮しクラスターへの負荷を軽減できます。",
-    "xpack.ml.datavisualizer.searchPanel.sampleSizeAriaLabel": "サンプリングするドキュメント数を選択してください",
-    "xpack.ml.datavisualizer.searchPanel.sampleSizeOptionLabel": "サンプルサイズ (シャード単位) ：{wrappedValue}",
-    "xpack.ml.dataVisualizer.searchPanel.showEmptyFields": "空のフィールドを表示",
-    "xpack.ml.datavisualizer.searchPanel.totalDocCountLabel": "合計ドキュメント数：{strongTotalCount}",
     "xpack.ml.datavisualizer.selector.dataVisualizerDescription": "機械学習データビジュアライザーツールは、ログファイルのメトリックとフィールド、または既存の Elasticsearch インデックスを分析し、データの理解を助けます。",
     "xpack.ml.datavisualizer.selector.dataVisualizerTitle": "データビジュアライザー",
     "xpack.ml.datavisualizer.selector.experimentalBadgeLabel": "実験的",
@@ -15040,40 +15025,8 @@
     "xpack.ml.explorerCharts.errorCallOutMessage": "{reason}ため、{jobs} の異常値グラフを表示できません。",
     "xpack.ml.feature.reserved.description": "ユーザーアクセスを許可するには、machine_learning_user か machine_learning_admin ロールのどちらかを割り当てる必要があります。",
     "xpack.ml.featureRegistry.mlFeatureName": "機械学習",
-    "xpack.ml.fieldDataCard.cardBoolean.valuesLabel": "値",
-    "xpack.ml.fieldDataCard.cardDate.earliestLabel": "最も古い",
-    "xpack.ml.fieldDataCard.cardDate.latestLabel": "最新",
-    "xpack.ml.fieldDataCard.cardDate.summaryTableTitle": "まとめ",
-    "xpack.ml.fieldDataCard.cardText.fieldMayBePopulatedDescription": "たとえば、ドキュメントマッピングで {copyToParam} パラメーターを使ったり、{includesParam} と {excludesParam} パラメーターを使用してインデックスした後に {sourceParam} フィールドから切り取ったりして入力される場合があります。",
-    "xpack.ml.fieldDataCard.cardText.fieldNotPresentDescription": "このフィールドはクエリが実行されたドキュメントの {sourceParam} フィールドにありませんでした。",
-    "xpack.ml.fieldDataCard.cardText.noExamplesForFieldsTitle": "このフィールドの例が取得されませんでした",
-    "xpack.ml.fieldDataCard.documentCountChart.seriesLabel": "ドキュメントカウント",
-    "xpack.ml.fieldDataCard.examplesList.noExamplesMessage": "このフィールドの例が取得されませんでした",
-    "xpack.ml.fieldDataCard.examplesList.title": "{numExamples, plural, one {値} other {例}}",
-    "xpack.ml.fieldDataCard.fieldNotInDocsLabel": "このフィールドは選択された時間範囲のドキュメントにありません",
-    "xpack.ml.fieldDataCard.loadingLabel": "読み込み中",
-    "xpack.ml.fieldDataCard.metricDistributionChart.seriesName": "分布",
-    "xpack.ml.fieldDataCard.metricDistributionChart.tooltipValueBetweenLabel": "{percent}% のドキュメントに {minValFormatted} から {maxValFormatted} の間の値があります",
-    "xpack.ml.fieldDataCard.metricDistributionChart.tooltipValueEqualLabel": "{percent}% のドキュメントに {valFormatted} の値があります",
-    "xpack.ml.fieldDataCard.topValues.calculatedFromSampleDescription": "1 つのシャードにつき {topValuesSamplerShardSize} のドキュメントのサンプルで計算されています",
-    "xpack.ml.fieldDataCard.topValuesLabel": "トップの値",
-    "xpack.ml.fieldDataCardExpandedRow.booleanContent.falseCountLabel": "False",
-    "xpack.ml.fieldDataCardExpandedRow.booleanContent.summaryTableTitle": "まとめ",
-    "xpack.ml.fieldDataCardExpandedRow.booleanContent.trueCountLabel": "True",
-    "xpack.ml.fieldDataCardExpandedRow.documentStatsTable.countLabel": "カウント",
-    "xpack.ml.fieldDataCardExpandedRow.documentStatsTable.distinctValueLabel": "固有の値",
-    "xpack.ml.fieldDataCardExpandedRow.documentStatsTable.metaTableTitle": "ドキュメント統計情報",
-    "xpack.ml.fieldDataCardExpandedRow.documentStatsTable.percentageLabel": "割合",
-    "xpack.ml.fieldDataCardExpandedRow.numberContent.displayingPercentilesLabel": "{minPercent} - {maxPercent} パーセンタイルを表示中",
-    "xpack.ml.fieldDataCardExpandedRow.numberContent.distributionTitle": "分布",
-    "xpack.ml.fieldDataCardExpandedRow.numberContent.maxLabel": "最高",
-    "xpack.ml.fieldDataCardExpandedRow.numberContent.medianLabel": "中間",
-    "xpack.ml.fieldDataCardExpandedRow.numberContent.minLabel": "分",
-    "xpack.ml.fieldDataCardExpandedRow.numberContent.summaryTableTitle": "まとめ",
-    "xpack.ml.fieldTitleBar.documentCountLabel": "ドキュメントカウント",
     "xpack.ml.fieldTypeIcon.booleanTypeAriaLabel": "ブールタイプ",
     "xpack.ml.fieldTypeIcon.dateTypeAriaLabel": "日付タイプ",
-    "xpack.ml.fieldTypeIcon.fieldTypeTooltip": "{type} タイプ",
     "xpack.ml.fieldTypeIcon.geoPointTypeAriaLabel": "{geoPointParam} タイプ",
     "xpack.ml.fieldTypeIcon.ipTypeAriaLabel": "IP タイプ",
     "xpack.ml.fieldTypeIcon.keywordTypeAriaLabel": "キーワードタイプ",
