--- a/x-pack/plugins/translations/translations/zh-CN.json
+++ b/x-pack/plugins/translations/translations/zh-CN.json
@@ -9157,6 +9157,30 @@
     "xpack.fileDataVisualizer.welcomeContent.uploadedFilesAllowedSizeDescription": "您可以上传不超过 {maxFileSize} 的文件。",
     "xpack.fileDataVisualizer.welcomeContent.visualizeDataFromLogFileDescription": "File Data Visualizer 可帮助您理解日志文件中的字段和指标。上传文件、分析文件数据，然后选择是否将数据导入 Elasticsearch 索引。",
     "xpack.fileDataVisualizer.welcomeContent.visualizeDataFromLogFileTitle": "可视化来自日志文件的数据 {experimentalBadge}",
+    "xpack.fileDataVisualizer.actionsPanel.discoverAppTitle": "Discover",
+    "xpack.fileDataVisualizer.actionsPanel.exploreTitle": "浏览您的数据",
+    "xpack.fileDataVisualizer.actionsPanel.viewIndexInDiscoverDescription": "浏览您的索引中的文档。",
+    "xpack.fileDataVisualizer.indexBased.fieldNameSelect": "字段名称",
+    "xpack.fileDataVisualizer.indexBased.fieldTypeSelect": "字段类型",
+    "xpack.fileDataVisualizer.indexBasedDataGrid.actionsColumnLabel": "操作",
+    "xpack.fileDataVisualizer.indexBasedDataGrid.exploreInLensDescription": "在 Lens 中浏览",
+    "xpack.fileDataVisualizer.indexBasedDataGrid.exploreInLensTitle": "在 Lens 中浏览",
+    "xpack.fileDataVisualizer.lensChart.averageOfLabel": "{fieldName} 的平均值",
+    "xpack.fileDataVisualizer.lensChart.chartTitle": "{fieldName} 的 Lens",
+    "xpack.fileDataVisualizer.lensChart.countLabel": "计数",
+    "xpack.fileDataVisualizer.lensChart.topValuesLabel": "排名最前值",
+    "xpack.fileDataVisualizer.searchPanel.allOptionLabel": "搜索全部",
+    "xpack.fileDataVisualizer.searchPanel.invalidKuerySyntaxErrorMessageQueryBar": "无效查询",
+    "xpack.fileDataVisualizer.searchPanel.queryBarPlaceholder": "选择较小的样例大小将减少查询运行时间和集群上的负载。",
+    "xpack.fileDataVisualizer.searchPanel.queryBarPlaceholderText": "搜索…… (例如，status:200 AND extension:\"PHP\") ",
+    "xpack.fileDataVisualizer.searchPanel.sampleSizeAriaLabel": "选择要采样的文档数目",
+    "xpack.fileDataVisualizer.searchPanel.sampleSizeOptionLabel": "样本大小 (每分片) ：{wrappedValue}",
+    "xpack.fileDataVisualizer.searchPanel.showEmptyFields": "显示空字段",
+    "xpack.fileDataVisualizer.searchPanel.totalDocCountLabel": "文档总数：{strongTotalCount}",
+    "xpack.fileDataVisualizer.searchPanel.totalDocCountNumber": "{totalCount, plural, other {#}}",
+    "xpack.fileDataVisualizer.fieldDataCard.documentCountChart.seriesLabel": "文档计数",
+    "xpack.fileDataVisualizer.fieldDataCard.fieldNotInDocsLabel": "此字段不会出现在所选时间范围的任何文档中",
+    "xpack.fileDataVisualizer.fieldDataCard.loadingLabel": "正在加载",
     "xpack.fileUpload.fileSizeError": "文件大小 {fileSize} 超过最大文件大小 {maxFileSize}",
     "xpack.fileUpload.fileTypeError": "文件不是可接受类型之一：{types}",
     "xpack.fileUpload.geojsonFilePicker.acceptedCoordinateSystem": "坐标必须在 EPSG:4326 坐标参考系中。",
@@ -15065,48 +15089,9 @@
     "xpack.ml.dataGridChart.notEnoughData": "0 个文档包含字段。",
     "xpack.ml.dataGridChart.singleCategoryLegend": "{cardinality, plural, other {# 个类别}}",
     "xpack.ml.dataGridChart.topCategoriesLegend": "{cardinality} 个类别中的排名前 {maxChartColumns} 个",
-    "xpack.ml.datavisualizer.actionsPanel.advancedDescription": "为更高级的用例创建具有全部选项的作业。",
-    "xpack.ml.datavisualizer.actionsPanel.advancedTitle": "高级异常检测",
-    "xpack.ml.datavisualizer.actionsPanel.createJobTitle": "创建作业",
-    "xpack.ml.datavisualizer.actionsPanel.dataframeAnalyticsTitle": "数据帧分析",
-    "xpack.ml.datavisualizer.actionsPanel.dataframeTypesDescription": "创建离群值检测、回归或分类分析。",
-    "xpack.ml.datavisualizer.actionsPanel.discoverAppTitle": "Discover",
-    "xpack.ml.datavisualizer.actionsPanel.exploreTitle": "浏览您的数据",
-    "xpack.ml.datavisualizer.actionsPanel.viewIndexInDiscoverDescription": "浏览您的索引中的文档。",
-    "xpack.ml.datavisualizer.dataGrid.collapseDetailsForAllAriaLabel": "收起所有字段的详细信息",
-    "xpack.ml.datavisualizer.dataGrid.distinctValuesColumnName": "不同值",
-    "xpack.ml.datavisualizer.dataGrid.distributionsColumnName": "分布",
-    "xpack.ml.datavisualizer.dataGrid.documentsCountColumnName": "文档 (%)",
-    "xpack.ml.datavisualizer.dataGrid.expandDetailsForAllAriaLabel": "展开所有字段的详细信息",
-    "xpack.ml.datavisualizer.dataGrid.nameColumnName": "名称",
-    "xpack.ml.datavisualizer.dataGrid.rowCollapse": "隐藏 {fieldName} 的详细信息",
-    "xpack.ml.datavisualizer.dataGrid.rowExpand": "显示 {fieldName} 的详细信息",
-    "xpack.ml.datavisualizer.dataGrid.showDistributionsAriaLabel": "显示分布",
-    "xpack.ml.datavisualizer.dataGrid.typeColumnName": "类型",
     "xpack.ml.datavisualizer.dataLoader.internalServerErrorMessage": "加载索引 {index} 中的数据时出错。{message}。请求可能已超时。请尝试使用较小的样例大小或缩小时间范围。",
     "xpack.ml.dataVisualizer.fileBasedLabel": "文件",
-    "xpack.ml.dataVisualizer.indexBased.fieldNameSelect": "字段名称",
-    "xpack.ml.dataVisualizer.indexBased.fieldTypeSelect": "字段类型",
-    "xpack.ml.dataVisualizer.indexBasedDataGrid.actionsColumnLabel": "操作",
-    "xpack.ml.dataVisualizer.indexBasedDataGrid.exploreInLensDescription": "在 Lens 中浏览",
-    "xpack.ml.dataVisualizer.indexBasedDataGrid.exploreInLensTitle": "在 Lens 中浏览",
-    "xpack.ml.dataVisualizer.lensChart.averageOfLabel": "{fieldName} 的平均值",
-    "xpack.ml.dataVisualizer.lensChart.chartTitle": "{fieldName} 的 Lens",
-    "xpack.ml.dataVisualizer.lensChart.countLabel": "计数",
-    "xpack.ml.dataVisualizer.lensChart.topValuesLabel": "排名最前值",
     "xpack.ml.datavisualizer.page.errorLoadingDataMessage": "加载索引 {index} 中的数据时出错。{message}",
-    "xpack.ml.dataVisualizer.searchPanel.allFieldsLabel": "所有字段",
-    "xpack.ml.datavisualizer.searchPanel.allOptionLabel": "搜索全部",
-    "xpack.ml.datavisualizer.searchPanel.invalidKuerySyntaxErrorMessageQueryBar": "无效查询",
-    "xpack.ml.dataVisualizer.searchPanel.numberFieldsLabel": "字段数目",
-    "xpack.ml.dataVisualizer.searchPanel.ofFieldsTotal": "，共 {totalCount} 个",
-    "xpack.ml.datavisualizer.searchPanel.queryBarPlaceholder": "选择较小的样例大小将减少查询运行时间和集群上的负载。",
-    "xpack.ml.datavisualizer.searchPanel.queryBarPlaceholderText": "搜索…… (例如，status:200 AND extension:\"PHP\") ",
-    "xpack.ml.datavisualizer.searchPanel.sampleSizeAriaLabel": "选择要采样的文档数目",
-    "xpack.ml.datavisualizer.searchPanel.sampleSizeOptionLabel": "样本大小 (每分片) ：{wrappedValue}",
-    "xpack.ml.dataVisualizer.searchPanel.showEmptyFields": "显示空字段",
-    "xpack.ml.datavisualizer.searchPanel.totalDocCountLabel": "文档总数：{strongTotalCount}",
-    "xpack.ml.datavisualizer.searchPanel.totalDocCountNumber": "{totalCount, plural, other {#}}",
     "xpack.ml.datavisualizer.selector.dataVisualizerDescription": "Machine Learning 数据可视化工具通过分析日志文件或现有 Elasticsearch 索引中的指标和字段，帮助您理解数据。",
     "xpack.ml.datavisualizer.selector.dataVisualizerTitle": "数据可视化工具",
     "xpack.ml.datavisualizer.selector.experimentalBadgeLabel": "实验性",
@@ -15237,40 +15222,8 @@
     "xpack.ml.explorerCharts.errorCallOutMessage": "由于{reason}，您无法查看 {jobs} 的异常图表。",
     "xpack.ml.feature.reserved.description": "要向用户授予访问权限，还应分配 machine_learning_user 或 machine_learning_admin 角色。",
     "xpack.ml.featureRegistry.mlFeatureName": "Machine Learning",
-    "xpack.ml.fieldDataCard.cardBoolean.valuesLabel": "值",
-    "xpack.ml.fieldDataCard.cardDate.earliestLabel": "最早",
-    "xpack.ml.fieldDataCard.cardDate.latestLabel": "最新",
-    "xpack.ml.fieldDataCard.cardDate.summaryTableTitle": "摘要",
-    "xpack.ml.fieldDataCard.cardText.fieldMayBePopulatedDescription": "例如，可以使用文档映射中的 {copyToParam} 参数进行填充，也可以在索引后通过使用 {includesParam} 和 {excludesParam} 参数从 {sourceParam} 字段中修剪。",
-    "xpack.ml.fieldDataCard.cardText.fieldNotPresentDescription": "查询的文档的 {sourceParam} 字段中不存在此字段。",
-    "xpack.ml.fieldDataCard.cardText.noExamplesForFieldsTitle": "没有获取此字段的示例",
-    "xpack.ml.fieldDataCard.documentCountChart.seriesLabel": "文档计数",
-    "xpack.ml.fieldDataCard.examplesList.noExamplesMessage": "没有获取此字段的示例",
-    "xpack.ml.fieldDataCard.examplesList.title": "{numExamples, plural, one {值} other {示例}}",
-    "xpack.ml.fieldDataCard.fieldNotInDocsLabel": "此字段不会出现在所选时间范围的任何文档中",
-    "xpack.ml.fieldDataCard.loadingLabel": "正在加载",
-    "xpack.ml.fieldDataCard.metricDistributionChart.seriesName": "分布",
-    "xpack.ml.fieldDataCard.metricDistributionChart.tooltipValueBetweenLabel": "{percent}% 的文档具有介于 {minValFormatted} 和 {maxValFormatted} 之间的值",
-    "xpack.ml.fieldDataCard.metricDistributionChart.tooltipValueEqualLabel": "{percent}% 的文档的值为 {valFormatted}",
-    "xpack.ml.fieldDataCard.topValues.calculatedFromSampleDescription": "基于每个分片的 {topValuesSamplerShardSize} 文档样例计算",
-    "xpack.ml.fieldDataCard.topValuesLabel": "排名最前值",
-    "xpack.ml.fieldDataCardExpandedRow.booleanContent.falseCountLabel": "false",
-    "xpack.ml.fieldDataCardExpandedRow.booleanContent.summaryTableTitle": "摘要",
-    "xpack.ml.fieldDataCardExpandedRow.booleanContent.trueCountLabel": "true",
-    "xpack.ml.fieldDataCardExpandedRow.documentStatsTable.countLabel": "计数",
-    "xpack.ml.fieldDataCardExpandedRow.documentStatsTable.distinctValueLabel": "不同值",
-    "xpack.ml.fieldDataCardExpandedRow.documentStatsTable.metaTableTitle": "文档统计",
-    "xpack.ml.fieldDataCardExpandedRow.documentStatsTable.percentageLabel": "百分比",
-    "xpack.ml.fieldDataCardExpandedRow.numberContent.displayingPercentilesLabel": "正在显示 {minPercent} - {maxPercent} 百分位数",
-    "xpack.ml.fieldDataCardExpandedRow.numberContent.distributionTitle": "分布",
-    "xpack.ml.fieldDataCardExpandedRow.numberContent.maxLabel": "最大值",
-    "xpack.ml.fieldDataCardExpandedRow.numberContent.medianLabel": "中值",
-    "xpack.ml.fieldDataCardExpandedRow.numberContent.minLabel": "最小值",
-    "xpack.ml.fieldDataCardExpandedRow.numberContent.summaryTableTitle": "摘要",
-    "xpack.ml.fieldTitleBar.documentCountLabel": "文档计数",
     "xpack.ml.fieldTypeIcon.booleanTypeAriaLabel": "布尔类型",
     "xpack.ml.fieldTypeIcon.dateTypeAriaLabel": "日期类型",
-    "xpack.ml.fieldTypeIcon.fieldTypeTooltip": "{type} 类型",
     "xpack.ml.fieldTypeIcon.geoPointTypeAriaLabel": "{geoPointParam} 类型",
     "xpack.ml.fieldTypeIcon.ipTypeAriaLabel": "IP 类型",
     "xpack.ml.fieldTypeIcon.keywordTypeAriaLabel": "关键字类型",
