--- a/docs/reporting/reporting-troubleshooting.asciidoc
+++ b/docs/reporting/reporting-troubleshooting.asciidoc
@@ -69,6 +69,12 @@ the first time Kibana starts when verbose logging is enabled.
 --
 
 [float]
+[[reporting-troubleshooting-centos-6]]
+==== CentOS/RHEL/OL 6 does not support PDF and PNG Reports
+Due to operating system incompatibility, PDF and PNG report generation does not work on CentOS, RedHat Enterprise Linux, or Oracle
+Linux distributions that are version 6 or below. The workaround is to use CentOS/RHEL/OL 7+.
+
+[float]
 [[reporting-troubleshooting-error-messages]]
 === Error Messages
 Whenever possible, a Reporting error message tries to be as self-explanatory as possible. Here are some error messages you might encounter,
